<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jeffreymor.googlehosts.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textAlignment="center"
            android:id="@+id/last_update_time"
            android:textSize="15sp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:background="@android:color/darker_gray"
            android:paddingBottom="8dp"
            android:paddingLeft="3dp"
            android:paddingTop="7dp"
            tools:text="@string/no_update_time"/>

        <Button
            android:id="@+id/proxy_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_last_host"/>
    </LinearLayout>

    <Button
        android:id="@+id/clean_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eset_host"/>

    <Button
        android:id="@+id/read_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_host"/>

    <Button
        android:id="@+id/task_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TEST"
        android:visibility="gone"
        android:clickable="false"/>


    <TextView
        android:id="@+id/tips"
        android:layout_marginTop="6dp"
        android:textSize="16sp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/your_mobile_have_no_root"/>
</LinearLayout>
